# IPO_bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
items/data/: Euronext_by_month.csv  Euronext_by_year.csv  Investings_by_month.csv  Investings_by_year.csv  Preqveca_by_month.csv  Preqveca_by_year.csv  Stockanalysis_by_month.csv  Stockanalysis_by_year.csv
settings/plot_settings/: settings.yaml
settings/telegram_api/: telegram_info.yaml
src/: __init__.py  config.py  data_validator.py  plot_sender.py  plots_creator.py
src/parsing_data/: __init__.py  euronext_parser.py  investings_parser.py  preqveca_parser.py  stockanalysis_parser.py
src/processing_data/: __init__.py  data_calculator.py  data_updater.py
src/utils/: __init__.py  file_handler.py  file_validator.py
